# Gw2TP

./: .gitignore  BUILD_EXE_README.md  LICENSE  README.md  app.py  build-exe.bat  constants.py  discord_app.py  docker-compose.yml  gw2_dll_app.cpp  gw2tp_history.py  helper.py  html_template.py  imgui.ini  index.html  items.py  pyproject.toml  requirements-exe.txt  requirements.txt  scripts.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.extend.yml
GW2TP_Addon/: .gitmodules  CHANGELOG.md  CMakeLists.txt  Constants.h  Constants.hpp  Data.cpp  Data.h  README.md  Render.cpp  Render.h  Settings.cpp  Settings.h  Shared.cpp  Shared.h  Types.h  Version.h  entry.cpp  imgui_extensions.h  main.cpp
GW2TP_Addon/httpclient/: httpclient.cpp  httpclient.h
GW2TP_Addon/src/: API.h  Constants.h  Data.cpp  Render.cpp  Render.h  Settings.cpp  Settings.h  Shared.cpp  Shared.h  Version.h  entry.cpp  main.cpp  resource.h  resource.rc
backend/: Dockerfile  api.py  db.py  main.py  pyproject.toml  scheduler.py
database/: data.db
discord_bot/: app.py  pyproject.toml
frontend/: Dockerfile  app.py  html_template.py  plotting.py  pyproject.toml
gw2tp/: constants.py  db_schema.py  helper.py  pyproject.toml  scheduler.py
gw2tp/gw2tp/: helper.py
src/: constants.py  db.py  helper.py  html_template.py  plotting.py  scheduler.py
templates/: plot.html
