[project]
name = "Gw2TP"
version = "0.1.0"
description = "Guild Wars 2 Trading Post utility"
authors = [{ name = "Jan Schaffranek", email = "your.email@example.com" }]

dependencies = [
    "requests",
    "pandas",
    "beautifulsoup4",
    "ruff",
    "pydantic",
    "isort",
    "fastapi",
    "uvicorn",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
